--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,8 @@ PHP                                                                        NEWS
   . Fixed bug ##62460 (php binaries installed as binary.dSYM). (Reeze Xia)
   . Fixed bug #60194 (--with-zend-multibyte and --enable-debug reports LEAK
     with run-test.php). (Laruence)
+  . Fixed bug #50524 (Fix the original fix, passing NULL as CWD does not 
+    work on Windows). (Pierre)
 
 - CURL:
   . Fixed bug #62839 (curl_copy_handle segfault with CURLOPT_FILE). (Pierrick)
