--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ PHP                                                                        NEWS
   . Fixed bug #63899 (Use after scope error in zend_compile). (Laruence)
   . Fixed bug #63762 (Sigsegv when Exception::$trace is changed by user).
     (Johannes)
+  . Fixed bug #63462 (Magic methods called twice for unset protected 
+    properties). (Stas)
 
 - Core
   . Fixed bug #63943 (Bad warning text from strpos() on empty needle).
