--- a/NEWS
+++ b/NEWS
@@ -3,11 +3,12 @@ PHP                                                                        NEWS
 ?? ??? 2012, PHP 5.4.12
 
 - Core:
-  . Fixed bug #63982 (isset() inconsistently produces a fatal error on 
+  . Fixed bug #63982 (isset() inconsistently produces a fatal error on
     protected property). (Stas)
   . Fixed bug #63943 (Bad warning text from strpos() on empty needle).
     (Laruence)
   . Fixed bug #63882 (zend_std_compare_objects crash on recursion). (Dmitry)
+  . Support BITMAPV5HEADER in getimagesize(). (AsamK, Lars)
 
 - Litespeed:
   . Fixed bug #63228 (-Werror=format-security error in lsapi code). (George)
@@ -26,7 +27,7 @@ PHP                                                                        NEWS
   . Fixed bug #63899 (Use after scope error in zend_compile). (Laruence)
   . Fixed bug #63762 (Sigsegv when Exception::$trace is changed by user).
     (Johannes)
-  . Fixed bug #43177 (Errors in eval()'ed code produce status code 500). 
+  . Fixed bug #43177 (Errors in eval()'ed code produce status code 500).
     (Todd Ruth, Stas).
 
 - Filter:
