--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-03 Jan 2013, PHP 5.3.21RC1
+17 Jan 2013, PHP 5.3.21
 
 - Zend Engine:
   . Fixed bug #63762 (Sigsegv when Exception::$trace is changed by user).
