NEWS for bug #64011. See 77ee200

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ PHP                                                                        NEWS
 ?? ??? 2012, PHP 5.4.12
 
 - Core:
+  . Fixed bug #64011 (get_html_translation_table() output incomplete with
+    HTML_ENTITIES and ISO-8859-1). (Gustavo)
   . Fixed bug #63982 (isset() inconsistently produces a fatal error on
     protected property). (Stas)
   . Fixed bug #63943 (Bad warning text from strpos() on empty needle).
