--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? 201?, PHP 5.5.0 Alpha 4
+24 Jan 2013, PHP 5.5.0 Alpha 4
 
 - Core:
   . Fixed bug #63980 (object members get trimmed by zero bytes). (Laruence)
