--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
+?? ??? 201?, PHP 5.5.0 Beta 1
+
+
 24 Jan 2013, PHP 5.5.0 Alpha 4
 
 - Core:
