--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,9 @@ PHP                                                                        NEWS
 ?? ??? 2013, PHP 5.3.22
 
 - Zend Engine:
+  . Fixed bug #64023 (echo tries standard cast_object implementation before the
+    one for the actual object; also fixed bug in SplFileInfo's cast_object).
+	(Gustavo, Dmitry)
   . Fixed bug #63899 (Use after scope error in zend_compile). (Laruence)
   . Fixed bug #63762 (Sigsegv when Exception::$trace is changed by user).
     (Johannes)
