Update versions for PHP 8.2.2RC1

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.2.2
+19 Jan 2023, PHP 8.2.2RC1
 
 - Core:
   . Fixed bug GH-10200 (zif_get_object_vars:
