--- a/NEWS
+++ b/NEWS
@@ -95,6 +95,8 @@ PHP                                                                        NEWS
 - Standard:
   . E_NOTICEs emitted by unserialize() have been promoted to E_WARNING. (timwolla)
   . Make array_pad's $length warning less confusing. (nielsdos)
+  . password_hash() will now chain the original RandomException to the ValueError
+    on salt generation failure. (timwolla)
 
 - Streams:
   . Fixed bug #51056: blocking fread() will block even if data is available.
