--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.2.2
+02 Feb 2023, PHP 8.2.2
 
 - Core:
   . Fixed bug GH-10200 (zif_get_object_vars:
