mb_strcut cuts out the requested range of bytes (no less)
The documentation for mb_strcut reads:

    mb_strcut() extracts a substring from a string similarly to
    mb_substr(), but operates on bytes instead of characters. If the cut
    position happens to be between two bytes of a multi-byte character,
    the cut is performed starting from the first byte of that character.
    This is also the difference to the substr() function, which would
    simply cut the string between the bytes and thus result in a
    malformed byte sequence.

(Ref: https://www.php.net/manual/en/function.mb-strcut.php)

However, from the very beginning, this function has never behaved
exactly as described in the documentation. To be more precise, for some
of mbstring's supported text encodings, it would behave as described,
but for many others, it would not.

For the STARTING cut, the function has always behaved as described.
The problem was with the ENDING cut. Instead of cutting out bytes up
to the ending cut point if it was a character boundary, or the
immediately preceding character boundary otherwise, the function would
do this:

It would start cutting out bytes from the starting cut point (or
immediately preceding character boundary), running these bytes through
the mbstring decoding/encoding filters for the text encoding in
question, and collect the output of the encoding filter, until the
number of bytes of output equalled the requested cut length.

That was fine for text encodings which only have one way to represent
any sequence of characters, and where no extra bytes need to be used
for escape sequences.

For encodings with more than one way to represent the same characters,
it didn't work. Take JIS7/8 for example. In this text encoding, a
single byte from 0xA1-DF encodes a katakana character. But the same
katakana can also be encoded using two bytes. For example, take the
following (contrived) JIS string (in hexadecimal notation, with UTF-8
below):

    61 62 63 A7 A8 A9 AA A

--- a/NEWS
+++ b/NEWS
@@ -77,6 +77,12 @@ PHP                                                                        NEWS
     QPrint-encoding the input string. This previously caused strings in
     certain text encodings, especially UTF-16 and UTF-32, to be
     corrupted by mb_encode_mimeheader. (Alex Dowad)
+  . mb_strcut now extracts the requested range of bytes and no less; this is
+    a change from PHP 8.2 for all legacy text encodings which can represent the
+    same string in more than one way (such as JIS or UTF-7), and all legacy
+    text encodings which use escape sequences to select one of multiple decoding
+    modes for the following bytes (such as UTF-7, HZ, or ISO-2022-JP).
+    (Alex Dowad)
 
 - mysqli:
   . mysqli_fetch_object raises a ValueError instead of an Exception.
