--- a/NEWS
+++ b/NEWS
@@ -69,6 +69,11 @@ PHP                                                                        NEWS
     encoded words as required by RFC 2047; they are converted to spaces.
     Underscores must be encoded as "=5F" in such MIME encoded words.
     (Alex Dowad)
+  . mb_encode_mimeheader does not truncate the last couple bytes of its
+    input string; the old implementation would do this in rare cases.
+    (Alex Dowad)
+  . mb_encode_mimeheader includes QPrint-encoded zero bytes in its
+    output (as "=00") rather than dropping them. (Alex Dowad)
 
 - Opcache:
   . Added start, restart and force restart time to opcache's
