--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.1.17
+02 Mar 2023, PHP 8.1.17RC1
 
 - Core:
   . Fixed incorrect check condition in ZEND_YIELD. (nielsdos)
