--- a/NEWS
+++ b/NEWS
@@ -29,6 +29,8 @@ PHP                                                                        NEWS
   . Fix GH-10447 ('p' format specifier does not yield 'Z' for 00:00). (Derick)
   . Fix GH-10152 (Custom properties of Date's child classes are not
     serialised). (Derick)
+  . Fixed bug GH-10747 (Private and protected properties in serialized Date*
+    objects throw). (Derick)
 
 - FFI:
   . Fixed incorrect bitshifting and masking in ffi bitfield. (nielsdos)
