[GDB] Fix 2nd round code review comments
1) Remove unused print_znode_op function
2) Add ____print_op_type function
3) Update printzops output format
4) Regenerate .gdbinit.md document

Signed-off-by: Tony Su <tao.su@intel.com>

--- a/.gdbinit.md
+++ b/.gdbinit.md
@@ -5,7 +5,7 @@
 	of frame info.
 
 # ____executor_globals
-	portable way of accessing executor_globals, set to $eg
+	portable way of accessing executor_globals, set as $eg
 	this also sets compiler_globals to $cg
 	ZTS detection is automatically based on ext/standard module struct
 
@@ -43,11 +43,11 @@
 
 # print_htptr
 	dumps elements of HashTable made of pointers
-	Usage: print_ht (HashTable*)pht
+	Usage: print_htptr (HashTable*)pht
 
 # print_htstr
 	dumps elements of HashTable made of strings
-	Usage: print_ht (HashTable*)pht
+	Usage: print_htstr (HashTable*)pht
 
 # print_ft
 	dumps a function table (HashTable)
@@ -63,10 +63,6 @@
 # printzn
 	print type and content of znode.
 	Usage: printzn (znode*)pznode
-
-# ____print_znode_op
-	Dump znode_op information
-	Usage: ____print_znode_op (znode_op*)pop
 
 # printzops
 	Dump operands of the current opline
