[GDB] Dump online with opname and minor bug fix
UpdateLog:
1) dump_opline now can print opcode and opname
2) printzops now accept specified opline, if not, use current executed
   opline
3) Fix a copy/paste bug in document

Signed-off-by: Tony Su <tao.su@intel.com>

--- a/.gdbinit.md
+++ b/.gdbinit.md
@@ -88,7 +88,7 @@
 
 # dump_current_opline
 	Dump currently executed opline information
-	Usage: print_executed_opline
+	Usage: dump_current_opline
 
 # dump_op_array
 	Dump opline information in an op_array
