[GDB] Add more functions and update document
UpdateLog
1) Add dump_execute_data and dump_current_execute_data functions
2) Assume <Empty> function name as "$_main" function
3) Update .gdbinit.md

Signed-off-by: Tony Su <tao.su@intel.com>

--- a/.gdbinit.md
+++ b/.gdbinit.md
@@ -17,6 +17,18 @@
 
 	Usage: print_cvs [(zend_execute_data*)ped]
 
+# print_tmps
+	Print temporary variables addresses and their values
+	Usage: print_tmps [(zend_execute_data*)ped]
+
+# ____print_literals
+	Print literal values in op_array
+	Usage: ____print_literals [(zend_op_array*) poparray]
+
+# print_literals
+	Print literal values in zend_execute_data
+	Usage: print_literals [(zend_execute_data*) ped]
+
 # dump_bt
 	dumps execution stack of PHP code.
 
@@ -97,6 +109,14 @@
 # dump_current_op_array
 	Dump opline information of current function
 	Usage: dump_current_op_array
+
+# dump_execute_data
+	Dump information of (zend_execute_data*) object
+	Usage: dump_execute_data (zend_execute_data*)ped
+
+# dump_current_execute_data
+	Dump information of current execute_data
+	Usage: dump_current_execute_data
 
 # bp_opline
 	Set breakpoint at opline->handler
