--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.1.18
+13 Apr 2023, PHP 8.1.18
 
 - Core:
   . Added optional support for max_execution_time in ZTS/Linux builds
