--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,10 @@ PHP                                                                        NEWS
   . Fixed bug GH-11134 (Incorrect match default branch optimization). (ilutov)
   . Fixed too wide OR and AND range inference. (nielsdos)
 
+- OpenSSL:
+  . Fixed bug GH-9356 Incomplete validation of
+    IPv6 Address fields in subjectAltNames (James Lucas, Jakub Zelenka)
+
 - PGSQL:
   . Fixed parameter parsing of pg_lo_export(). (kocsismate)
 
