--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.2.6
+11 May 2023, PHP 8.2.6
 
 - Core:
   . Fix inconsistent float negation in constant expressions. (ilutov)
