--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.2.7
+25 May 2023, PHP 8.2.7RC1
 
 - Core:
   . Fixed bug GH-11152 (Unable to alias namespaces containing reserved class
