Update NEWS for PHP 8.0.29

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.0.30
+08 Jun 2023, PHP 8.0.29
 
 
 08 Jun 2023, PHP 8.0.29
