--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.2.8
+22 Jun 2023, PHP 8.2.8RC1
 
 - CLI:
   . Fixed bug GH-11246 (cli/get_set_process_title fails on MacOS).
