--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,10 @@ PHP                                                                        NEWS
   . Fixed bug GH-11507 (String concatenation performance regression in 8.3).
     (nielsdos)
 
+- DOM:
+  . Implemented DOMDocument::adoptNode(). Previously this always threw a
+    "not yet implemented" exception. (nielsdos)
+
 - Fileinfo:
   . Fix GH-11408 (Unable to build PHP 8.3.0 alpha 1 / fileinfo extension).
     (nielsdos)
