Implement DOMElement::className
ref: https://dom.spec.whatwg.org/#dom-element-classname

--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,7 @@ PHP                                                                        NEWS
 
 - DOM:
   . Added DOMNode::contains() and DOMNameSpaceNode::contains(). (nielsdos)
+  . Added DOMElement::className. (nielsdos)
 
 - Intl:
   . Fix memory leak in MessageFormatter::format() on failure. (Girgias)
