--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.1.22
+20 Jul 2022, PHP 8.1.22RC1
 
 - Build:
   . Fixed bug GH-11522 (PHP version check fails with '-' separator).
