--- a/NEWS
+++ b/NEWS
@@ -79,6 +79,10 @@ PHP                                                                        NEWS
 
 - Standard:
   . Fix serialization of RC1 objects appearing in object graph twice. (ilutov)
+  
+- Streams:
+  . Fixed bug GH-11735 (Use-after-free when unregistering user stream wrapper
+    from itself). (ilutov)
 
 - SQLite3:
   . Fix replaced error handling in SQLite3Stmt::__construct. (nielsdos)
