Fix open_basedir leak
Fixes oss-fuzz #60741
Closes GH-11780

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,9 @@ PHP                                                                        NEWS
   . Fix DOMCharacterData::replaceWith() with itself. (nielsdos)
   . Fix empty argument cases for DOMParentNode methods. (nielsdos)
 
+- Core:
+  . Fixed oss-fuzz #60741 (Leak in open_basedir). (ilutov)
+
 - FFI:
   . Fix leaking definitions when using FFI::cdef()->new(...). (ilutov)
 
