--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.3.0beta2
+03 Aug 2023, PHP 8.3.0beta2
 
 - Bcmath
   . Fixed GH-11761 (removing trailing zeros from numbers) (jorgsowa)
