--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
-?? ??? ????, PHP 8.3.0beta3
+17 Aug 2023, PHP 8.3.0beta3
 
 - Core:
   . Fixed strerror_r detection at configuration time. (Kévin Dunglas)
